...
    default:
      return (
        <>
          <Button title="Lecture 2" onPress={() => setLectureShown(2)} />
          <Button title="Lecture 3" onPress={() => setLectureShown(3)} />
          <Button title="Lecture 4" onPress={() => setLectureShown(4)} />
          <Button title="Lecture 5" onPress={() => setLectureShown(5)} />
          <Button title="Lecture 6" onPress={() => setLectureShown(6)} />
        </>
      );
  }
}

...
